<resources>
    <string name="app_name">20230222-GirumAlemu-NYCSchools</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_name">School Name</string>
    <string name="sat_takers">SAT Takers:</string>
    <string name="avg_math">Avg Math:</string>
    <string name="avg_writing">Avg Writing:</string>
    <string name="avg_reading">Avg Reading:</string>
    <string name="scores">SAT Score</string>
    <string name="school_list">NYC Schools</string>
</resources>