<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.SatScoreFragment">

    <FrameLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="gone">

        <ProgressBar
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView_errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="200dp"
            android:textSize="30sp"
            tools:text="Some error message" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_error_outline" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_satResule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_score_background"
        android:orientation="vertical"
        android:padding="4dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView_School"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_school_name_background"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="30sp"
            tools:hint="@string/school_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="8dp"
                        android:text="@string/sat_takers"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView_testTakers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/item_score"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textSize="24sp"
                        tools:text="501" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="8dp"
                        android:text="@string/avg_reading"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView_avgReading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/item_score"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textSize="24sp"
                        tools:text="502" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="8dp"
                        android:text="@string/avg_writing"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView_avgWriting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/item_score"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:padding="8dp"

                        android:textSize="24sp"

                        tools:text="503" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="8dp"
                        android:text="@string/avg_math"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView_avgMath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/item_score"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textSize="24sp"
                        tools:text="504" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>